# apivolve_generator_api

./: Cargo.toml  README.md
examples/: README.md  apivolve-gen1-python-example
examples/rust_example/: Cargo.toml
examples/rust_example/src/: debug_dump.rs
old/: main_debug_dump.rs
old/gen1/: config.rs  steps.rs
src/: debug_dump.rs  lib.rs  main_debug_dump.rs
src/driver/: drive.rs  mod.rs  socket.rs
src/gen1/: config.rs  connect.rs  evolution.rs  mod.rs  run.rs  steps.rs  test_util.rs
src/gen1/connect/: acceptedformat.rs  accepts.rs  evpref.rs  format.rs  functionalityrequest.rs  genpref.rs  layout.rs  mod.rs  userpreferences.rs
src/gen1/data/: collection.rs  declared.rs  message.rs  mod.rs  scalar.rs  typ.rs
src/gen1/evolution/: evolution.rs  message.rs  mod.rs  typ.rs  util.rs
src/gen1/run/: api_trait.rs  gen_trait.rs  mod.rs  protocol.rs  run.rs  test_util.rs
src/gen1/test_gen/: test_util.rs
src/gen1/tests/: generate.rs  mod.rs  suite.rs  testdata.rs
src/util/: mod.rs  monitor.rs  newtype.rs  value.rs
