[package]
name = "apivolve_generator_api"
version = "0.1.0"
description = "Api for creating generators for Apivolve, an API evolution tool that helps keep your APIs backwards compatible yet clean."
edition = "2021"
publish = true
license = "Apache-2.0"
repository = "https://github.com/mverleg/apivolve_generator_api"

[lib]
name = "apivolve_generator_api"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
semver = { version = "1.0.6", features = ["serde"] }
log = { version = "0.4.14", features = ["release_max_level_info"] }
futures = { version = "0.3.21" }
async-trait = "0.1.53"
#TODO @mark: found a cool feature but is this worth it? ^
